--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/termux-x-repository/static/stylesheet.css">
+    <link rel="stylesheet" href="/termux-x-repo/static/stylesheet.css">
 
     <!-- Begin Jekyll SEO tag v2.3.0 -->
     <title>Termux Repository of X/GUI packages | termux-x-repository</title>
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://xeffyr.github.io/termux-x-repository/" />
     <meta property="og:site_name" content="termux-x-repository" />
     <script type="application/ld+json">
-      {"name":"termux-x-repository","description":"Termux Repository of X/GUI packages","author":null,"@type":"WebSite","url":"https://xeffyr.github.io/termux-x-repository/","image":null,"publisher":null,"headline":"APT Repository for Termux RootFS","dateModified":null,"datePublished":null,"sameAs":null,"mainEntityOfPage":null,"@context":"http://schema.org"}
+      {"name":"termux-x-repo","description":"Termux Repository of X/GUI packages","author":null,"@type":"WebSite","url":"https://xeffyr.github.io/termux-x-repository/","image":null,"publisher":null,"headline":"APT Repository for Termux RootFS","dateModified":null,"datePublished":null,"sameAs":null,"mainEntityOfPage":null,"@context":"http://schema.org"}
     </script>
     <!-- End Jekyll SEO tag -->
   </head>
